A bunch of America stuff

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -3482,3 +3482,303 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   ENG_ImpFed_Centralized_ds_ADJ:0 "Imperial"
   ENG_ImpFed_Centralized_cn_ADJ:0 "Imperial"
   ENG_ImpFed_Centralized_an_ADJ:0 "Imperial"
+
+  AME_Indian_Territory_ni:0 "American Indian Territory"
+  AME_Indian_Territory_ni_DEF:0 "The American Indian Territory"
+  AME_Indian_Territory_ds:0 "American Indian Territory"
+  AME_Indian_Territory_ds_DEF:0 "American Indian Territory"
+  AME_Indian_Territory_rc:0 "American Indian Territory"
+  AME_Indian_Territory_rc_DEF:0 "American Indian Territory"
+  AME_Indian_Territory_an:0 "American Indian Territory"
+  AME_Indian_Territory_an_DEF:0 "American Indian Territory"
+  AME_Indian_Territory_cn:0 "American Indian Territory"
+  AME_Indian_Territory_cn_DEF:0 "American Indian Territory"
+  AME_Indian_Territory_lb:0 "American Indian Territory"
+  AME_Indian_Territory_lb_DEF:0 "American Indian Territory"
+  AME_Indian_Territory_ss:0 "American Indian Territory"
+  AME_Indian_Territory_ss_DEF:0 "American Indian Territory"
+  AME_Indian_Territory_jc:0 "American Indian Territory"
+  AME_Indian_Territory_jc_DEF:0 "The American Indian Territory"
+  AME_Indian_Territory_ni_ADJ:0 "American Indian"
+  AME_Indian_Territory_rc_ADJ:0 "American Indian"
+  AME_Indian_Territory_lb_ADJ:0 "American Indian"
+  AME_Indian_Territory_ss_ADJ:0 "American Indian"
+  AME_Indian_Territory_jc_ADJ:0 "American Indian"
+  AME_Indian_Territory_ds_ADJ:0 "American Indian"
+  AME_Indian_Territory_cn_ADJ:0 "American Indian"
+  AME_Indian_Territory_an_ADJ:0 "American Indian"
+
+  BCL_Indian_Territory_ni:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_ni_DEF:0 "The Borealian Indian Territory"
+  BCL_Indian_Territory_ds:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_ds_DEF:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_rc:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_rc_DEF:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_an:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_an_DEF:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_cn:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_cn_DEF:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_lb:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_lb_DEF:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_ss:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_ss_DEF:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_jc:0 "Borealian Indian Territory"
+  BCL_Indian_Territory_jc_DEF:0 "The Borealian Indian Territory"
+  BCL_Indian_Territory_ni_ADJ:0 "American Indian"
+  BCL_Indian_Territory_rc_ADJ:0 "American Indian"
+  BCL_Indian_Territory_lb_ADJ:0 "American Indian"
+  BCL_Indian_Territory_ss_ADJ:0 "American Indian"
+  BCL_Indian_Territory_jc_ADJ:0 "American Indian"
+  BCL_Indian_Territory_ds_ADJ:0 "American Indian"
+  BCL_Indian_Territory_cn_ADJ:0 "American Indian"
+  BCL_Indian_Territory_an_ADJ:0 "American Indian"
+
+  SCA_Defeat_Collapse_ni:0 "Third Continental Army"
+  SCA_Defeat_Collapse_ni_DEF:0 "The Third Continental Army"
+  SCA_Defeat_Collapse_ds:0 "Third Continental Army"
+  SCA_Defeat_Collapse_ds_DEF:0 "Third Continental Army"
+  SCA_Defeat_Collapse_rc:0 "Third Continental Army"
+  SCA_Defeat_Collapse_rc_DEF:0 "Third Continental Army"
+  SCA_Defeat_Collapse_an:0 "Third Continental Army"
+  SCA_Defeat_Collapse_an_DEF:0 "Third Continental Army"
+  SCA_Defeat_Collapse_cn:0 "Third Continental Army"
+  SCA_Defeat_Collapse_cn_DEF:0 "Third Continental Army"
+  SCA_Defeat_Collapse_lb:0 "Third Continental Army"
+  SCA_Defeat_Collapse_lb_DEF:0 "Third Continental Army"
+  SCA_Defeat_Collapse_ss:0 "Third Continental Army"
+  SCA_Defeat_Collapse_ss_DEF:0 "Third Continental Army"
+  SCA_Defeat_Collapse_jc:0 "Third Continental Army"
+  SCA_Defeat_Collapse_jc_DEF:0 "The Third Continental Army"
+  SCA_Defeat_Collapse_ni_ADJ:0 "American"
+  SCA_Defeat_Collapse_rc_ADJ:0 "American"
+  SCA_Defeat_Collapse_lb_ADJ:0 "American"
+  SCA_Defeat_Collapse_ss_ADJ:0 "American"
+  SCA_Defeat_Collapse_jc_ADJ:0 "American"
+  SCA_Defeat_Collapse_ds_ADJ:0 "American"
+  SCA_Defeat_Collapse_cn_ADJ:0 "American"
+  SCA_Defeat_Collapse_an_ADJ:0 "American"
+
+  DES_SCA_Collapse_ni:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_ni_DEF:0 "The Autonomous Province of Deseret"
+  DES_SCA_Collapse_ds:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_ds_DEF:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_rc:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_rc_DEF:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_an:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_an_DEF:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_cn:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_cn_DEF:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_lb:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_lb_DEF:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_ss:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_ss_DEF:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_jc:0 "Autonomous Province of Deseret"
+  DES_SCA_Collapse_jc_DEF:0 "The Autonomous Province of Deseret"
+  DES_SCA_Collapse_ni_ADJ:0 "Mormon"
+  DES_SCA_Collapse_rc_ADJ:0 "Mormon"
+  DES_SCA_Collapse_lb_ADJ:0 "Mormon"
+  DES_SCA_Collapse_ss_ADJ:0 "Mormon"
+  DES_SCA_Collapse_jc_ADJ:0 "Mormon"
+  DES_SCA_Collapse_ds_ADJ:0 "Mormon"
+  DES_SCA_Collapse_cn_ADJ:0 "Mormon"
+  DES_SCA_Collapse_an_ADJ:0 "Mormon"
+
+  SCA_Collapse_Northbasin_ni:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_ni_DEF:0 "The Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_ds:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_ds_DEF:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_rc:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_rc_DEF:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_an:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_an_DEF:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_cn:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_cn_DEF:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_lb:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_lb_DEF:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_ss:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_ss_DEF:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_jc:0 "Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_jc_DEF:0 "The Northbasin Occupation Zone"
+  SCA_Collapse_Northbasin_ni_ADJ:0 "Trekker"
+  SCA_Collapse_Northbasin_rc_ADJ:0 "Trekker"
+  SCA_Collapse_Northbasin_lb_ADJ:0 "Trekker"
+  SCA_Collapse_Northbasin_ss_ADJ:0 "Trekker"
+  SCA_Collapse_Northbasin_jc_ADJ:0 "Trekker"
+  SCA_Collapse_Northbasin_ds_ADJ:0 "Trekker"
+  SCA_Collapse_Northbasin_cn_ADJ:0 "Trekker"
+  SCA_Collapse_Northbasin_an_ADJ:0 "Trekker"
+
+  SCA_Collapse_Second_Army_ni:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_ni_DEF:0 "The Fourth Continental Army"
+  SCA_Collapse_Second_Army_ds:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_ds_DEF:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_rc:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_rc_DEF:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_an:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_an_DEF:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_cn:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_cn_DEF:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_lb:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_lb_DEF:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_ss:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_ss_DEF:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_jc:0 "Fourth Continental Army"
+  SCA_Collapse_Second_Army_jc_DEF:0 "The Fourth Continental Army"
+  SCA_Collapse_Second_Army_ni_ADJ:0 "Trekker"
+  SCA_Collapse_Second_Army_rc_ADJ:0 "Trekker"
+  SCA_Collapse_Second_Army_lb_ADJ:0 "Trekker"
+  SCA_Collapse_Second_Army_ss_ADJ:0 "Trekker"
+  SCA_Collapse_Second_Army_jc_ADJ:0 "Trekker"
+  SCA_Collapse_Second_Army_ds_ADJ:0 "Trekker"
+  SCA_Collapse_Second_Army_cn_ADJ:0 "Trekker"
+  SCA_Collapse_Second_Army_an_ADJ:0 "Trekker"
+
+  SCA_Collapse_Congress_ni:0 "Congressional American Republic"
+  SCA_Collapse_Congress_ni_DEF:0 "The Congressional American Republic"
+  SCA_Collapse_Congress_ds:0 "Congressional American Republic"
+  SCA_Collapse_Congress_ds_DEF:0 "Congressional American Republic"
+  SCA_Collapse_Congress_rc:0 "Congressional American Republic"
+  SCA_Collapse_Congress_rc_DEF:0 "Congressional American Republic"
+  SCA_Collapse_Congress_an:0 "Congressional American Republic"
+  SCA_Collapse_Congress_an_DEF:0 "Congressional American Republic"
+  SCA_Collapse_Congress_cn:0 "Congressional American Republic"
+  SCA_Collapse_Congress_cn_DEF:0 "Congressional American Republic"
+  SCA_Collapse_Congress_lb:0 "Congressional American Republic"
+  SCA_Collapse_Congress_lb_DEF:0 "Congressional American Republic"
+  SCA_Collapse_Congress_ss:0 "Congressional American Republic"
+  SCA_Collapse_Congress_ss_DEF:0 "Congressional American Republic"
+  SCA_Collapse_Congress_jc:0 "Congressional American Republic"
+  SCA_Collapse_Congress_jc_DEF:0 "The Congressional American Republic"
+  SCA_Collapse_Congress_ni_ADJ:0 "American"
+  SCA_Collapse_Congress_rc_ADJ:0 "American"
+  SCA_Collapse_Congress_lb_ADJ:0 "American"
+  SCA_Collapse_Congress_ss_ADJ:0 "American"
+  SCA_Collapse_Congress_jc_ADJ:0 "American"
+  SCA_Collapse_Congress_ds_ADJ:0 "American"
+  SCA_Collapse_Congress_cn_ADJ:0 "American"
+  SCA_Collapse_Congress_an_ADJ:0 "American"
+
+  SCA_Defeat_Cascadia_ni:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_ni_DEF:0 "The West Coast Port Authority"
+  SCA_Defeat_Cascadia_ds:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_ds_DEF:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_rc:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_rc_DEF:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_an:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_an_DEF:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_cn:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_cn_DEF:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_lb:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_lb_DEF:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_ss:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_ss_DEF:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_jc:0 "West Coast Port Authority"
+  SCA_Defeat_Cascadia_jc_DEF:0 "The West Coast Port Authority"
+  SCA_Defeat_Cascadia_ni_ADJ:0 "American"
+  SCA_Defeat_Cascadia_rc_ADJ:0 "American"
+  SCA_Defeat_Cascadia_lb_ADJ:0 "American"
+  SCA_Defeat_Cascadia_ss_ADJ:0 "American"
+  SCA_Defeat_Cascadia_jc_ADJ:0 "American"
+  SCA_Defeat_Cascadia_ds_ADJ:0 "American"
+  SCA_Defeat_Cascadia_cn_ADJ:0 "American"
+  SCA_Defeat_Cascadia_an_ADJ:0 "American"
+
+  NIC_Zeledon_Victory_ni:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_ni_DEF:0 "The Nicaraguan Republic"
+  NIC_Zeledon_Victory_ds:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_ds_DEF:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_rc:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_rc_DEF:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_an:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_an_DEF:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_cn:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_cn_DEF:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_lb:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_lb_DEF:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_ss:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_ss_DEF:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_jc:0 "Nicaraguan Republic"
+  NIC_Zeledon_Victory_jc_DEF:0 "The Nicaraguan Republic"
+  NIC_Zeledon_Victory_ni_ADJ:0 "Nicaraguan"
+  NIC_Zeledon_Victory_rc_ADJ:0 "Nicaraguan"
+  NIC_Zeledon_Victory_lb_ADJ:0 "Nicaraguan"
+  NIC_Zeledon_Victory_ss_ADJ:0 "Nicaraguan"
+  NIC_Zeledon_Victory_jc_ADJ:0 "Nicaraguan"
+  NIC_Zeledon_Victory_ds_ADJ:0 "Nicaraguan"
+  NIC_Zeledon_Victory_cn_ADJ:0 "Nicaraguan"
+  NIC_Zeledon_Victory_an_ADJ:0 "Nicaraguan"
+
+  NIC_Federalist_Victory_ni:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_ni_DEF:0 "The Federal Province of Nicaragua"
+  NIC_Federalist_Victory_ds:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_ds_DEF:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_rc:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_rc_DEF:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_an:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_an_DEF:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_cn:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_cn_DEF:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_lb:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_lb_DEF:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_ss:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_ss_DEF:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_jc:0 "Federal Province of Nicaragua"
+  NIC_Federalist_Victory_jc_DEF:0 "The Federal Province of Nicaragua"
+  NIC_Federalist_Victory_ni_ADJ:0 "Nicaraguan"
+  NIC_Federalist_Victory_rc_ADJ:0 "Nicaraguan"
+  NIC_Federalist_Victory_lb_ADJ:0 "Nicaraguan"
+  NIC_Federalist_Victory_ss_ADJ:0 "Nicaraguan"
+  NIC_Federalist_Victory_jc_ADJ:0 "Nicaraguan"
+  NIC_Federalist_Victory_ds_ADJ:0 "Nicaraguan"
+  NIC_Federalist_Victory_cn_ADJ:0 "Nicaraguan"
+  NIC_Federalist_Victory_an_ADJ:0 "Nicaraguan"
+
+  NIC_Coopupation_ni:0 "Condominium of Nicaragua"
+  NIC_Coopupation_ni_DEF:0 "The Condominium of Nicaragua"
+  NIC_Coopupation_ds:0 "Condominium of Nicaragua"
+  NIC_Coopupation_ds_DEF:0 "Condominium of Nicaragua"
+  NIC_Coopupation_rc:0 "Condominium of Nicaragua"
+  NIC_Coopupation_rc_DEF:0 "Condominium of Nicaragua"
+  NIC_Coopupation_an:0 "Condominium of Nicaragua"
+  NIC_Coopupation_an_DEF:0 "Condominium of Nicaragua"
+  NIC_Coopupation_cn:0 "Condominium of Nicaragua"
+  NIC_Coopupation_cn_DEF:0 "Condominium of Nicaragua"
+  NIC_Coopupation_lb:0 "Condominium of Nicaragua"
+  NIC_Coopupation_lb_DEF:0 "Condominium of Nicaragua"
+  NIC_Coopupation_ss:0 "Condominium of Nicaragua"
+  NIC_Coopupation_ss_DEF:0 "Condominium of Nicaragua"
+  NIC_Coopupation_jc:0 "Condominium of Nicaragua"
+  NIC_Coopupation_jc_DEF:0 "The Condominium of Nicaragua"
+  NIC_Coopupation_ni_ADJ:0 "Nicaraguan"
+  NIC_Coopupation_rc_ADJ:0 "Nicaraguan"
+  NIC_Coopupation_lb_ADJ:0 "Nicaraguan"
+  NIC_Coopupation_ss_ADJ:0 "Nicaraguan"
+  NIC_Coopupation_jc_ADJ:0 "Nicaraguan"
+  NIC_Coopupation_ds_ADJ:0 "Nicaraguan"
+  NIC_Coopupation_cn_ADJ:0 "Nicaraguan"
+  NIC_Coopupation_an_ADJ:0 "Nicaraguan"
+
+  NIC_American_Integration_ni:0 "Province of Nicaragua"
+  NIC_American_Integration_ni_DEF:0 "The Province of Nicaragua"
+  NIC_American_Integration_ds:0 "Province of Nicaragua"
+  NIC_American_Integration_ds_DEF:0 "Province of Nicaragua"
+  NIC_American_Integration_rc:0 "Province of Nicaragua"
+  NIC_American_Integration_rc_DEF:0 "Province of Nicaragua"
+  NIC_American_Integration_an:0 "Province of Nicaragua"
+  NIC_American_Integration_an_DEF:0 "Province of Nicaragua"
+  NIC_American_Integration_cn:0 "Province of Nicaragua"
+  NIC_American_Integration_cn_DEF:0 "Province of Nicaragua"
+  NIC_American_Integration_lb:0 "Province of Nicaragua"
+  NIC_American_Integration_lb_DEF:0 "Province of Nicaragua"
+  NIC_American_Integration_ss:0 "Province of Nicaragua"
+  NIC_American_Integration_ss_DEF:0 "Province of Nicaragua"
+  NIC_American_Integration_jc:0 "Province of Nicaragua"
+  NIC_American_Integration_jc_DEF:0 "The Province of Nicaragua"
+  NIC_American_Integration_ni_ADJ:0 "Nicaraguan-American"
+  NIC_American_Integration_rc_ADJ:0 "Nicaraguan-American"
+  NIC_American_Integration_lb_ADJ:0 "Nicaraguan-American"
+  NIC_American_Integration_ss_ADJ:0 "Nicaraguan-American"
+  NIC_American_Integration_jc_ADJ:0 "Nicaraguan-American"
+  NIC_American_Integration_ds_ADJ:0 "Nicaraguan-American"
+  NIC_American_Integration_cn_ADJ:0 "Nicaraguan-American"
+  NIC_American_Integration_an_ADJ:0 "Nicaraguan-American"
