--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -714,7 +714,7 @@
   # Second Continental Army - Exile
 
   SCA_The_Dead_March_West:0 "The Dead March West"
-  SCA_The_Dead_March_West_desc:0 "Our initial revolutiion has failed and now we must lick our wounds and rebuild our strength so that one day we may return to take what is rightfully ours. This will be no simple proccess, already plans have been drawn up to expand our regional influence with our direct neighbours. "
+  SCA_The_Dead_March_West_desc:0 "Our initial revolution has failed and now we must lick our wounds and rebuild our strength so that one day we may return to take what is rightfully ours. This will be no simple proccess, already plans have been drawn up to expand our regional influence with our direct neighbours. "
 
   SCA_The_First_Seeds:0 "The First Seeds"
   SCA_The_First_Seeds_desc:0 "Food, what more is there to say really. Without a stable reserve of food, be it even just wheat, we could face a catastrophic crisis on our hands. Luckily most of the intial wave had brought over large amounts of various seeds and cattle, time to put our citizens to good work."
@@ -1007,13 +1007,13 @@
   SCA_Exporting_Americas_Army_desc:0 ""
 
   SCA_Military_Operations_Mexico:0 "Military Operations: Mexico"
-  SCA_Military_Operations_Mexico_desc:0 ""
+  SCA_Military_Operations_Mexico_desc:0 "It is a sad truth that the hispaniards of the southern hinterlands are corrupted by reactionary thinking. They have fallen victim to a replication of the imperialistic system imported by the Europeans, where the common man is subservient to the whims of their self-indulging masters. It would be irresponsible of us to allow this oppression to continue to occur right under our noses, with possibly millions of workers caught in the civil strife that capitalism always drags in its bloated wake. Our options are limited, and a force of arms must be considered; to arms for the Jacobin cause! "
 
   SCA_Military_Operations_Caribbean:0 "Military Operations: Caribbean"
-  SCA_Military_Operations_Caribbean_desc:0 ""
+  SCA_Military_Operations_Caribbean_desc:0 "Imperialists will cling to any holdings that they possibly can if it means that they can drag out their petty profit driven existence. The Caribbean islands just an ocean away are occupied in some of the most brutal of fashions known to man, with plantation-based slave economies serving as a façade for the true product of their continued presence here. Why, nothing less than military garrisons!\n\nIt is becoming ever more clear to us that these tropical paradises are a staging ground for an inevitable invasion of our homelands. By liberating them, we're not only freeing the oppressed slaves, but eliminating a serious threat to our way of life and existence as an entity. Two birds, one stone."
 
   SCA_Council_For_Mutual_Economic_Assistance:0 "Council For Mutual Economic Assistance"
-  SCA_Council_For_Mutual_Economic_Assistance_desc:0 ""
+  SCA_Council_For_Mutual_Economic_Assistance_desc:0 "While the capitalist nations will preach that purchasing power serves only to benefit the fat-cat elites, we have come to rightfully embrace its morally superior uses. Our strengthening economy should be dedicated towards empowering other like-minded allies endeavouring in their share of the global struggle against imperialism. To be able to effectively achieve this ambition, we will establish the Council for Mutual Economic Assistance, a financial bureau that we may employ to direct the economy for the good of the collective."
 
   SCA_The_Tonkaliwako_Accord:0 "The Tonkaliwako Accord"
   SCA_The_Tonkaliwako_Accord_desc:0 ""
@@ -1028,7 +1028,7 @@
   SCA_Establish_The_Republics_desc:0 ""
 
   SCA_Dedication_To_Liberation:0 "Dedication To Liberation"
-  SCA_Dedication_To_Liberation_desc:0 ""
+  SCA_Dedication_To_Liberation_desc:0 "What is the movement without its cause? A body without a soul, that's what! It becomes like the lifeless blood-sucking capitalist system that we have strived to excise from our God-blessed lands. Thus, we must rally the American collective to OUR cause; the Jacobin cause!"
 
   SCA_The_Filth_Of_The_Earth:0 "The Filth Of The Earth"
   SCA_The_Filth_Of_The_Earth_desc:0 ""
@@ -1037,7 +1037,7 @@
   SCA_Seven_Oceans_Navy_desc:0 ""
 
   SCA_Proclaim_The_United_States_Of_America:0 "Proclaim The United States of America"
-  SCA_Proclaim_The_United_States_Of_America_desc:0 ""
+  SCA_Proclaim_The_United_States_Of_America_desc:0 "Friends, comrades, we have finally done it! We started as a small insurgency, forced to flee our homeland with the stink of defeat. Our march east cost us many lives, but we survived. And from this small core of survivors, we became a fully fledged nation. One that fought our former colonial masters and won, freeing America from the shackles of Imperialism. Today is the day we move on from an interim government, to a functional and permanent one. Today the world will know of the United States of America!"
 
   SCA_The_American_Cultural_Revolution:0 "The American Cultural Revolution"
   SCA_The_American_Cultural_Revolution_desc:0 ""
@@ -1088,7 +1088,7 @@
   SCA_Crush_The_Secret_Empire_desc:0 "Across the south a web of hidden loyalties are weaved, binding towns and people in vows of loyalty to the murderous White League. These men lie in plain sight, working as shopkeepers or farmers by day- but at night the feral beast surfaces as they don their white hoods and wage their war against us.\n\nWe must uproot this cancer with surgical precision. Communities suspected of harbouring these terrorist elements will be interned, removing them from infecting the populace with their reactionary thought. We will move forward to fully destroy the reactionary culture that pervades the south; tearing down their false idols and executing any would be "martyrs".\n\nThere will be no rebels than us, no revolution but ours."
 
   SCA_Fight_Against_Futurism:0 "Fight Against Futurism"
-  SCA_Fight_Against_Futurism_desc:0 ""
+  SCA_Fight_Against_Futurism_desc:0 "Automated labour; a bittersweet opportunity. While it is undeniable that automation can vastly outproduce human workers in terms of efficiency and hours of work, we cannot grow ourselves on a system that blatantly disregards the hundreds of thousands of workers who need to provide not only for themselves but their families too. Having witnessed first-hand the devastating effects on the common labourer caused by the employment shortages of the infernal machine, we have no right to repeat this mistake; a careful approach must be taken in regards to automation, moderating its usage and guaranteeing the jobs of our invaluable workforce. "
 
   SCA_The_Capital_Question:0 "The Capital Question"
   SCA_The_Capital_Question_desc:0 "Now that our rule has been cemented it is time to decide what our permanent capital will be. The symbolism of our choice will important, so we have whittled the candidates down to four major cities:\n\nNew York is an obvious choice to many, being our largest and most modern city it represents our dedication to a prosperous future- but the stain of capitalism will be hard to remove from the historically decadent city.\n\nThe next candidate is Boston, a very symbolic choice for it was where the first American Revolution began. For the party faithful there is no city more suitable to house our revolution. However, some of our comrades have also suggested the original home of our revolution be the capital: Libertyville. Although more isolated from the urban centres of the east, its loyalty to the our cause is unquestionable and deserves recognition.\n\nFinally, a contingent of supporters have formed around Chicago being our capital. Like New York, it is a modern city of immense prestige and technological marvel, and its central location makes it perfect to project our influence over our nation. But it is not without controversy: being under Quebecois rule for so long has created a culture unlike our own, which may be more difficult to accommodate.\n\nAs always, the choice is yours to make. "
@@ -1422,28 +1422,28 @@
   SCA25optc:0 "William Foster"
 
   SCA26title:0 "The Confederacy Occupation Question"
-  SCA26desc:0 "" 
+  SCA26desc:0 "The defeat of the Confederacy was no shock to our professional high command as well as those fighting against the enemy with rifle and bayonet in hand. However, despite our extensive military planning we neglected questions around the occupation of the Confederacy and how we should best deal with the region if victory should arise, and it has. So, what shall we do with these newly liberated lands?" 
   SCA26opta:0 "We own these lands now."
   SCA26optb:0 "Grant the northern states to our Borealian subject, occupy everything else."
   SCA26optc:0 "Establish a revolutionary native republic."
 
   SCA27title:0 "The Cuban Occupation Question"
-  SCA27desc:0 "" 
+  SCA27desc:0 "The defeat of Cuba was no shock to our professional high command as well as those fighting against the enemy with rifle and bayonet in hand. However, despite our extensive military planning we neglected questions around the occupation of Cuban and how we should best deal with the region if victory should arise, and it has. So, what shall we do with these newly liberated lands?" 
   SCA27opta:0 "We own these lands now."
   SCA27optb:0 "Establish a loyal revolutionary regime."
 
   SCA28title:0 "The Hispaniola Occupation Question"
-  SCA28desc:0 "" 
+  SCA28desc:0 "The defeat of Hispaniola was no shock to our professional high command as well as those fighting against the enemy with rifle and bayonet in hand. However, despite our extensive military planning we neglected questions around the occupation of Hispaniola and how we should best deal with the region if victory should arise, and it has. So, what shall we do with these newly liberated lands?" 
   SCA28opta:0 "We own these lands now."
   SCA28optb:0 "Establish a loyal revolutionary regime."
 
   SCA29title:0 "The Texan Occupation Question"
-  SCA29desc:0 "" 
+  SCA29desc:0 "The defeat of Tejas was no shock to our professional high command as well as those fighting against the enemy with rifle and bayonet in hand. However, despite our extensive military planning we neglected questions around the occupation of Tejas and how we should best deal with the region if victory should arise, and it has. So, what shall we do with these newly liberated lands?" 
   SCA29opta:0 "We own these lands now."
   SCA29optb:0 "Establish a loyal revolutionary regime."
 
   SCA30title:0 "The Sante Fe Occupation Question"
-  SCA30desc:0 "" 
+  SCA30desc:0 "The defeat of Sante Fe was no shock to our professional high command as well as those fighting against the enemy with rifle and bayonet in hand. However, despite our extensive military planning we neglected questions around the occupation of Sante Fe and how we should best deal with the region if victory should arise, and it has. So, what shall we do with these newly liberated lands?" 
   SCA30opta:0 "We own these lands now."
   SCA30optb:0 "Establish a loyal revolutionary regime."
   SCA30optc:0 "Establish a loyal revolutionary regime and give them Apacheria."
@@ -1473,12 +1473,12 @@
   SCA37opta:0 "Keeps the doctor away."
 
   SCA38title:0 "The Rio Grande Occupation Question"
-  SCA38desc:0 "" 
+  SCA38desc:0 "The defeat of Rio Grande was no shock to our professional high command as well as those fighting against the enemy with rifle and bayonet in hand. However, despite our extensive military planning we neglected questions around the occupation of Rio Grande and how we should best deal with the region if victory should arise, and it has. So, what shall we do with these newly liberated lands?" 
   SCA38opta:0 "We own these lands now."
   SCA38optb:0 "Establish a loyal revolutionary regime."
 
   SCA39title:0 "The Mexico Occupation Question"
-  SCA39desc:0 "" 
+  SCA39desc:0 "The defeat of Mexico was no shock to our professional high command as well as those fighting against the enemy with rifle and bayonet in hand. However, despite our extensive military planning we neglected questions around the occupation of Mexico and how we should best deal with the region if victory should arise, and it has. So, what shall we do with these newly liberated lands?" 
   SCA39opta:0 "We own these lands now."
   SCA39optb:0 "Establish a loyal revolutionary regime."
   SCA39optb:0 "Establish a loyal revolutionary regime and give them Baja California."
@@ -1537,6 +1537,34 @@
   SCA52title:0 "Butler Hanged"
   SCA52desc:0 "At exactly 10:00 a.m. every channel across the nation was interrupted by a short government address, then followed by stories of victims of the Reclamation war. Reports were shared to all viewers about the atrocities Butler and his armies had conducted on the American people and those who inhabited the once wild west. The Prime Minister himself, [AME.GetLeader], had read a short letter by an American soldier who had witnessed the barbarity of Continental troops towards innocent Trekker families. The letter contained rather descriptive language of the actions conducted by such tyrannic armies and had nearly brought [AME.GetLeader] to tears.\n\nEventually the moment everyone had been waiting for had finally arrived, after a few short words by members of the committee for war crime affairs Butler was allowed to share some final moments with the America people by reading out loud a heavily edited speech. “American’s I have failed not only as leader and a general, but as an American. I hope whatever is to come of my defeat that you find it in your hearts to forgive the actions I and my armies have committed. Today marks a turning point in the history not only of this great nation and its peoples, but also the globe. As I am reading these words to you, I promise with every remaining breath I have in me that my cause was always intended to be noble. I now salute my fellow Americans, Sic Semper Tyrannis.” Butler would eventually be hung for his crimes against the American people and his final tussle against the restricting rope would spell the definitive end of the American Revolution." 
   SCA52opta:0 "Sic Semper Tyrannis"
+
+  SCA53title:0 "Great Leap Forward"
+  SCA53desc:0 "”Whom amongst you dares to deny the revolution of steel and mind?” questioned the foreman to his now eager yet concerned pool of fresh workers.\n\nFrom afar a grazed and forceful voice had risen higher than the rest of the clambering whispers that could be heard in front of the Foreman.\n\n”What exactly are we building here? We haven’t any food and you are asking us to build you weap...”.\n\nBefore the nameless voice could finish a loud clambering of steel could be heard falling from its shelves deep into the heart of the factory. The atmosphere instantaneously became deathly silent.\n\nBuilding enough grit and courage the Foreman pointed to the now fallen steel “When the enemy comes they will find nothing out here but a few wooden walls and barely functioning machinery and that is exactly what they expect. Nothing but a nation of fools and dreamers. We are all hungry, we all want to rest, but the revolution demands we push on and so I ask you what will become of those that hadn’t the luxury to make it to this bastion of liberty this far west. Was their efforts for nothing, should we turn back?" 
+  SCA53opta:0 "We've come this far."
+
+  SCA54title:0 "Red Utopia"
+  SCA54desc:0 "" 
+  SCA54opta:0 ""
+
+  SCA55title:0 "Cult of Butler"
+  SCA55desc:0 "" 
+  SCA55opta:0 ""
+
+  SCA56title:0 "The People's Revolution"
+  SCA56desc:0 "" 
+  SCA56opta:0 ""
+
+  SCA57title:0 "A Truly American Revolution"
+  SCA57desc:0 "" 
+  SCA57opta:0 ""
+
+  SCA58title:0 "Fading Old West"
+  SCA58desc:0 "Factory smoke has filled the air of this nation and has clouded once clear skies, not even a star can be seen in the now burgeoning town of little big hamlet, a place famous for its captivating shows of heavens prettiest astral creations far out in the Cascadian wilderness. Roads lead in and out of this last bastion of the old west and only a few wise faces can still tell tales about what life once was like out here." 
+  SCA58opta:0 "Times change."
+
+  SCA59title:0 "Trial of the Damned"
+  SCA59desc:0 "Across America under one fell swoop all opposition, from the previous Philadelphia administration and otherwise, was duly arrested. Generals, politicians, and other members of any military or bureaucratic capacity that opposed our armies had found themselves tightly locked away where their most deserved fate would await them. Most military leaders that were captured during the war time offensives of our army were hanged or shot in mock executions during the spur of the moment, but some were kept purposely alive. The most prestigious of these arrests includes George C. Marshall, primary field marshal of the Commonwealth government, who had attempted to lead a last stand insurgency against occupation forces stationed in Boston.\n\nGeorge was soon arrested and detained alongside some of his closest allies and a handful of remaining cabinet members of the Commonwealth government. The C.I.G have now found it necessary that the crimes of Marshall and his men shall be revealed not only to the nation, but to the entire world. Where he will soon await a pre-ordained execution after a rigged trial hearing. " 
+  SCA59opta:0 "Revolution Triumphant!"
 
   ##########################
   # PUPPETS/AUTONOMIES
