--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -478,6 +478,7 @@
  VICTORY_POINTS_2026:0 "Isfahan"
  VICTORY_POINTS_5029:0 "Mashhad"
  VICTORY_POINTS_7953:0 "Ahvaz"
+ VICTORY_POINTS_10797:0 "Buschehr"
  VICTORY_POINTS_8117:0 "Shiraz"
  VICTORY_POINTS_10913:0 "Kerman"
  VICTORY_POINTS_10737:0 "Kabul"
