--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -627,7 +627,8 @@
  VICTORY_POINTS_7251:0 "Rabaul"
  VICTORY_POINTS_7302:0 "Suva"
  VICTORY_POINTS_12140:0 "Guam"
- VICTORY_POINTS_12237:0 "Rudolfstadt"
+ VICTORY_POINTS_12237:0 "Lae"
+ VICTORY_POINTS_7378:0 "Kokoda"
  VICTORY_POINTS_13021:0 "Tarawa"
  VICTORY_POINTS_13025:0 "Iwo Jima"
  VICTORY_POINTS_13028:0 "Yap"
