--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -629,6 +629,8 @@
  VICTORY_POINTS_12140:0 "Guam"
  VICTORY_POINTS_12237:0 "Lae"
  VICTORY_POINTS_7378:0 "Kokoda"
+ VICTORY_POINTS_6826:0 "Sulaimaniya"
+ VICTORY_POINTS_8123:0 "Kirkuk"
  VICTORY_POINTS_13021:0 "Tarawa"
  VICTORY_POINTS_13025:0 "Iwo Jima"
  VICTORY_POINTS_13028:0 "Yap"
